<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_all"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/c_id"/>

    <TextView
        android:layout_toRightOf="@+id/c_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/c_name"
        android:layout_below="@+id/c_id"/>

    <TextView
        android:layout_below="@+id/tv_id"
        android:layout_toRightOf="@+id/c_name"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c_uname"
        android:text="@string/username"
        android:layout_below="@+id/c_name"/>

    <TextView
        android:layout_toRightOf="@+id/c_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username"
        android:layout_below="@+id/tv_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/c_pass"
        android:layout_below="@+id/c_uname"/>

    <TextView
        android:layout_toRightOf="@+id/c_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password"
        android:layout_below="@+id/tv_username"/>

    <RelativeLayout
        android:id="@+id/rel_1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_id"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:layout_below="@+id/et_id"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:layout_below="@+id/et_name"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:id="@+id/et_password"/>

    </RelativeLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_1"
        android:id="@+id/btn_up"
        android:text="@string/btn_up"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:text="@string/btn_del"
        android:layout_below="@+id/btn_up"/>

</RelativeLayout>